2000-08-02  Pablo Saratxaga <pablo@mandrakesoft.com>

	* et.po: added a header to the file, so statistics and checking can
	work with it

2000-07-24  Fatih Demir	<kabalak@gmx.net>

	* tr.po: Updated the 1 fuzzy, 1 untranslated entry
		to be not fuzzy & untranslated ...

2000-07-23  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	
2000-07-09  Karl Eichwalder  <ke@suse.de>

	* de.po: Update from Kai Lahmann <kailahmann@01019freenet.de>.

2000-06-24  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-06-11  Benedikt Roth  <Benedikt.Roth@gmx.net>

	* de.po: Added German translation.
	
2000-06-11  Fatih Demir  <kabalak@gmx.net> 

        * tr.po: Updated the Turkish translation.

2000-06-08  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated Norwegian translation.
	
2000-06-04  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.
	* POTFILES.in: added missed files.

2000-05-23  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.
	* update.sh: 1.2.5 version.

2000-05-13  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated Norwegian translation.
	
2000-05-01  Valek Filippov  <frob@df.ru>

	* ru.po: Updated russian translation.

2000-05-01  Kjartan Maraas  <kmaraas@gnu.org>

	* no.po: Updated Norwegian translation.
	
2000-04-29  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated Norwegian translation.
	
2000-04-25  Valek Filippov  <frob@df.ru>

	* ru.po: Updated russian translation.

2000-04-21  Fatih Demir	<kabalak@gmx.net>

	* tr.po : Added the Turkish translation .

2000-04-20  Andreas Hyden  <a.hyden@cyberpoint.se>

	* sv.po: Added Swedish translation.

2000-04-18  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated Norwegian translation.
	
2000-04-16  Pablo Saratxaga <pablo@mandrakesoft.com>

        * da.po: Updated Danish file

2000-04-12  Pablo Saratxaga Pablo <pablo@mandrakesoft.com>

	* da.po: Added Danish file

2000-04-06  Kjartan Maraas  <kmaraas@online.no>
